intermediate revision - verified no error on linux java 1.8