@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.RestController;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
@@ -39,7 +40,8 @@ public class BookController implements BooksApi {
         book2.setName("Lord of the Rings");
         book2.setAuthor("J.R.R. Tolkien");
 
-        books.addAll(List.of(book1, book2));
+        // books.addAll(List.of(book1, book2));
+        books.addAll(Arrays.asList(new Book[]{book1, book2}));
 
         // Send custom header in response
         HttpHeaders headers = new HttpHeaders();
